Refactor RiderController class related maintability issues